--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Lista de Productos</title>
-  </head>
-  <body>
-    <h1>Lista de Productos</h1>
-    <ul>
-      {{#each products}}
-      <li>
-        <p>{{this.title}}</p>
-        <p>{{this.description}}</p>
-        <p>{{this.price}}</p>
-        <p>{{this.stock}}</p>
-      </li>
-      {{/each}}
-    </ul>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Lista de Productos</title>
+</head>
+<body>
+  <h1>Lista de Productos</h1>
+  <ul>
+    {{#each products}}
+    <li>{{this.title}} - {{this.description}}</li>
+    {{/each}}
+  </ul>
+</body>
 </html>
